# dunno-backend

./: pyproject.toml  requirements.txt
.ebextensions/: 01_django.config
games/: anagrams.py  models.py  odd_one_out.py  urls.py  utils.py  views.py
games/games/anagrams/: anagrams.py
games/migrations/: 0001_initial.py
proj/: settings.py  urls.py  views.py
scripts/: generate_anagrams.py  generate_odd_one_out_games.py
