[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ross Meredith <rossmere67@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
django-extensions = "^3.1.5"
django-cors-headers = "^3.11.0"
pytest-django = "^4.5.2"
pylint = "^2.13.7"
pylint-django = "^2.5.3"
psycopg2-binary = "^2.9.3"
django-cte = "^1.2.0"
hashids = "^1.3.1"
pandas = "^1.4.2"
django-storages = "^1.12.3"
boto3 = "1.23.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.black]
force-exclude = "migrations|snapshots"
line-length = 100

[tool.isort]
profile = "black"
skip = "migrations"

[tool.pylint.master]
django-settings-module = "proj.settings"
ignore = "migrations"
load-plugins = [
  "pylint_django"
]

[tool.pylint.messages_control]
disable = [
  "duplicate-code",
  "too-few-public-methods",
  "no-self-use",
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "import-outside-toplevel",
  "fixme",
  "wildcard-import",
  "unused-wildcard-import",
  "too-many-ancestors",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
